--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,26 @@ import Layout from '../layouts/Layout.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Card from '../components/Card.astro';
 import ContactForm from '../components/ContactForm.astro';
+
+import { Image } from '@astrojs/image/components';
+
 ---
 
 <BaseLayout>
+	<div class="introduction-hero">
+		<div class="introduction-text">
+				<h1>Austin Johnson</h1>
+				<h3>Full-Stack Web Developer<br> Based out of Phoenix, Arizona</h3>
+		</div>
+		<Image src="/profile.jpg"
+			class="border-radius"
+			width={300}
+			height={450}
+			aspectRatio="900x1200"
+			format="png"
+			alt="A rocket blasting off."
+		/>
+	</div>
 	<p>Here is some content</p>
 	<ContactForm></ContactForm>
 </BaseLayout>
@@ -21,5 +38,43 @@ import ContactForm from '../components/ContactForm.astro';
 		font-size: 3rem;
 		font-weight: 800;
 		margin: 0;
+
+		@media (max-width:30em) {
+			font-size: 2rem;
+		}
+	}
+
+	.introduction-hero {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+	}
+
+	@media (max-width:30em) {
+		.introduction-hero{
+			/* display: relative !important; */
+		}
+	}
+	
+	.introduction-text {
+		margin-right: 2rem;
+
+		@media (max-width:30em) {
+			position: absolute;
+			top: 40%;
+			left: 20%;
+			color: white;
+			font-size: 0.9rem;
+		}
+	}
+
+	.introduction-image {
+		@media (max-width:30em) {
+		}
+	}
+
+	.border-radius { 
+		border-radius: 10px;
 	}
 </style>
