--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,9 @@ import { Image } from '@astrojs/image/components';
 			alt="A rocket blasting off."
 		/>
 	</div>
+	<div class="skills">
+		
+	</div>
 	<p>Here is some content</p>
 	<ContactForm></ContactForm>
 </BaseLayout>
@@ -49,6 +52,8 @@ import { Image } from '@astrojs/image/components';
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
+		padding: 2rem;
+		border-bottom: 1px solid #404f6a;
 	}
 
 	@media (max-width:30em) {
@@ -58,7 +63,7 @@ import { Image } from '@astrojs/image/components';
 	}
 	
 	.introduction-text {
-		margin-right: 2rem;
+		margin-right: 6rem;
 
 		@media (max-width:30em) {
 			position: absolute;
