--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,52 @@
 <footer>
-  Footer
+  <h3>Austin Johnson &middot; Web Developer</h2>
+  
+    <ul>
+      <li>
+        <a>
+          <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
+          <span class="sr-only">LinkedIn</span>
+        </a>
+      </li>
+      <li>
+        <a>
+          <span class="fa-brands fa-github" aria-hidden="true"></span>
+          <span class="sr-only">Github</span>
+        </a>
+      </li>
+      <li>
+        <a>
+          <span class="fa-solid fa-envelope" aria-hidden="true"></span>
+          <span class="sr-only">Email</span>
+        </a>
+      </li>
+    </ul>
+  <p><small>&copy; 2023 Austin Johnson. All rights reserved.</small></p>
 </footer>
+
+
+<style>
+
+footer {
+  padding: 5rem;
+  text-align: center;
+  font-size: 1rem;
+}
+
+footer ul {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  padding: 0;
+  margin: 2rem;
+  font-size: 3rem;
+  color: var(--nord9);
+}
+
+footer span:hover {
+  cursor: pointer;
+  color: var(--nord8);
+}
+</style>
