--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,1 +1,104 @@
-<div>Navbar</div>
+---
+import Icon from 'astro-iconify';
+---
+
+<nav id="navbar">
+  <ul>
+    <li>
+      <h1><a href="index.html"><span class=""><iconify-icon pack="ph:terminal-fill" width="100"></iconify-icon></span>
+        <span>Austin Johnson</span>
+</a></h1>
+    </li>
+    <li><a href="blog">Blog</a></li>
+    <li><a href="Projects">Projects</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="https://www.linkedin.com/in/austin-johnson-34b737146" target="_blank"><Icon pack="mdi" name="linkedin" aria-hidden="true" /> <span class="sr-only">LinkedIn</span></a></li>
+    <li><a href="https://github.com/eccentricnode" target="_blank"><Icon pack="mdi" name="github" aria-hidden="true" /> <span class="sr-only">Github</span></a></li>
+    <li><a href="https://www.google.com" target="_blank" class="resume-button">Resume</a></li>
+  </ul>
+</nav>
+
+<style>
+  
+nav { 
+  font-family: var(--mono);
+  font-size: 90%;
+  padding: 1rem;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+nav h1 a {
+  font-family: var(--sans);
+  font-size: 80%;
+}
+
+nav li:first-child {
+  flex-basis: 100%;
+  text-align: center;
+}
+
+.logo-icon {
+  font-size: 100%;
+  color: var(--nord9);
+}
+
+nav h1 span:hover {
+  color: var(--nord9)
+}
+
+nav [class*="fa-"] {
+  font-size: 150%;
+  color: var(--nord9);
+}
+
+nav [class*="fa-"]:hover {
+  color: var(--nord8);
+}
+
+nav a {
+  color: var(--nord4);
+  text-decoration: none;
+  display: block;
+}
+
+nav a:hover {
+  color: var(--nord8);
+}
+
+.resume-button {
+  background-color: var(--nord8);
+  color: var(--nord2);
+  padding: 0.5rem;
+  border-radius: 5px;
+}
+
+.resume-button:hover {
+  color: var(--nord6);
+  background-color: var(--nord9);
+}
+
+@media (min-width: 850px) {
+  nav {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  nav li:first-child {
+    flex-basis: auto;
+    text-align: left;
+    margin-right: auto;
+  }
+}
+
+</style>
