--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,4 +1,11 @@
-<form
+<section id="contact">
+  <h3>Contact Me</h3>
+  <p>I am always interested in hearing about new opportunities. <br> If you would like to work with me, go ahead and drop an email.</p>
+  
+  <button class="contact-button">Email Me</button>
+</section>
+
+<!-- <form
   name="contact"
   method="POST"
   data-netlify="true"
@@ -27,32 +34,28 @@
   </div>
   <p>
   </p>
-</form>
+</form> -->
 
 <style>
-  .contact-card {
-    border: 1px solid #404f6a;
-    border-radius: 5px;
-    box-shadow:  0 5px 25px rgba(0, 0, 0, 0.2);
-    margin: 5rem 10rem;
-  }
+#contact {
+  background-color: var(--nord1);
+  padding: 10rem;
+  text-align: center;
+}
 
-  .contact-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 2rem;
-    /* align-items: center; */
-  }
+#contact button {
+  background-color: var(--nord8);
+  color: var(--nord1);
+  font-size: 1rem;
+  padding: .5rem;
+  border-radius: 5px;
+  border: none;
+  margin: 2rem;
+}
 
-  input[type="text"], input[type="email"], textarea {
-    display: block;
-    width: 100%;
-    margin-bottom: 1rem;
-  }
-
-
-  .hidden {
-    display: none;
-  }
+#contact button:hover {
+  cursor: pointer;
+  background-color: var(--nord10);
+  color: var(--nord4)
+}
 </style>
