--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -10,6 +10,7 @@ const title = Astro.props;
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <meta name="generator" content={Astro.generator} />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>{title}</title>
