--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,22 +1,26 @@
+---
+import { Icon } from "astro-iconify";
+
+---
+
 <footer>
   <h3>Austin Johnson &middot; Web Developer</h2>
-  
     <ul>
       <li>
         <a>
-          <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
+          <Icon pack="mdi" name="linkedin" aria-hidden="true" class="social-icon" />
           <span class="sr-only">LinkedIn</span>
         </a>
       </li>
       <li>
         <a>
-          <span class="fa-brands fa-github" aria-hidden="true"></span>
+          <Icon pack="mdi" name="github" aria-hidden="true" class="social-icon" />
           <span class="sr-only">Github</span>
         </a>
       </li>
       <li>
         <a>
-          <span class="fa-solid fa-envelope" aria-hidden="true"></span>
+          <Icon pack="mdi" name="github" aria-hidden="true" class="social-icon" />
           <span class="sr-only">Email</span>
         </a>
       </li>
@@ -26,7 +30,6 @@
 
 
 <style>
-
 footer {
   padding: 5rem;
   text-align: center;
@@ -44,6 +47,7 @@ footer ul {
   font-size: 3rem;
   color: var(--nord9);
 }
+
 
 footer span:hover {
   cursor: pointer;
