--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,22 +5,32 @@ import Icon from 'astro-iconify';
 <nav id="navbar">
   <ul>
     <li>
-      <h1><a href="index.html"><span class=""><iconify-icon pack="ph:terminal-fill" width="100"></iconify-icon></span>
-        <span>Austin Johnson</span>
-</a></h1>
+      <h1><a href="index.html">
+        <span></span><Icon name="ph:terminal-fill" width="50" aria-hidden="true"></Icon>
+        <span class="">Austin Johnson</span>
+      </a></h1>
     </li>
     <li><a href="blog">Blog</a></li>
     <li><a href="Projects">Projects</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="https://www.linkedin.com/in/austin-johnson-34b737146" target="_blank"><Icon pack="mdi" name="linkedin" aria-hidden="true" /> <span class="sr-only">LinkedIn</span></a></li>
-    <li><a href="https://github.com/eccentricnode" target="_blank"><Icon pack="mdi" name="github" aria-hidden="true" /> <span class="sr-only">Github</span></a></li>
+    <li>
+      <a href="https://www.linkedin.com/in/austin-johnson-34b737146" target="_blank">
+        <Icon pack="mdi" name="linkedin" aria-hidden="true" class="social-icon" />
+        <span class="sr-only">LinkedIn</span>
+      </a>
+    </li>
+    <li>
+      <a href="https://github.com/eccentricnode" target="_blank">
+        <Icon pack="mdi" name="github" aria-hidden="true" class="social-icon" />
+        <span class="sr-only">Github</span>
+      </a>
+    </li>
     <li><a href="https://www.google.com" target="_blank" class="resume-button">Resume</a></li>
   </ul>
 </nav>
 
 <style>
-  
 nav { 
   font-family: var(--mono);
   font-size: 90%;
@@ -49,7 +59,7 @@ nav li:first-child {
 }
 
 .logo-icon {
-  font-size: 100%;
+  width: 3rem;
   color: var(--nord9);
 }
 
