--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -39,7 +39,7 @@
 <style>
 #contact {
   background-color: var(--nord1);
-  padding: 10rem;
+  padding: 10rem 0;
   text-align: center;
 }
 
@@ -50,7 +50,7 @@
   padding: .5rem;
   border-radius: 5px;
   border: none;
-  margin: 2rem;
+  margin: 2rem 0;
 }
 
 #contact button:hover {
