--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,24 +1,44 @@
 ---
-import Icon from 'astro-iconify';
+import Icon from "astro-iconify";
 ---
 
+<script>
+  const hamburger = document.querySelector(".hamburger");
+  const navMenu = document.querySelector("#nav-menu");
+
+  hamburger.addEventListener("click", mobileMenu);
+
+  function mobileMenu() {
+    hamburger.classList.toggle("active");
+    navMenu.classList.toggle("active");
+  }
+</script>
+
 <nav id="navbar">
-  <ul>
-    <li>
-      <h1><a href="index.html">
-        <span class="">
-          <Icon name="ph:terminal-fill" width="50" aria-hidden="true" />
-          Austin Johnson
-        </span>
-      </a></h1>
-    </li>
+  <h1>
+    <a href="index.html">
+      <span class="">
+        <Icon name="ph:terminal-fill" width="50" aria-hidden="true" />
+        Austin Johnson
+      </span>
+    </a>
+  </h1>
+  <ul id="nav-menu">
     <li><a href="blog">Blog</a></li>
     <li><a href="Projects">Projects</a></li>
     <li><a href="about.html">About</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li>
-      <a href="https://www.linkedin.com/in/austin-johnson-34b737146" target="_blank">
-        <Icon pack="mdi" name="linkedin" aria-hidden="true" class="social-icon" />
+      <a
+        href="https://www.linkedin.com/in/austin-johnson-34b737146"
+        target="_blank"
+      >
+        <Icon
+          pack="mdi"
+          name="linkedin"
+          aria-hidden="true"
+          class="social-icon"
+        />
         <span class="sr-only">LinkedIn</span>
       </a>
     </li>
@@ -28,86 +48,141 @@ import Icon from 'astro-iconify';
         <span class="sr-only">Github</span>
       </a>
     </li>
-    <li><a href="https://www.google.com" target="_blank" class="resume-button">Resume</a></li>
+    <li>
+      <a href="https://www.google.com" target="_blank" class="resume-button"
+        >Resume</a
+      >
+    </li>
   </ul>
+  <div class="hamburger">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </div>
 </nav>
 
 <style>
-nav { 
-  font-family: var(--mono);
-  font-size: 90%;
-  padding: 1rem;
-}
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-
-nav h1 a {
-  font-family: var(--sans);
-  font-size: 80%;
-}
-
-nav li:first-child {
-  flex-basis: 100%;
-  text-align: center;
-}
-
-.logo-icon {
-  width: 3rem;
-  color: var(--nord9);
-}
-
-nav h1 span {
-  display: inline-flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-nav h1 span:hover {
-  color: var(--nord9);
-}
-
-nav a {
-  color: var(--nord4);
-  text-decoration: none;
-  display: block;
-}
-
-nav a:hover {
-  color: var(--nord8);
-}
-
-.resume-button {
-  background-color: var(--nord8);
-  color: var(--nord2);
-  padding: 0.5rem;
-  border-radius: 5px;
-}
-
-.resume-button:hover {
-  color: var(--nord6);
-  background-color: var(--nord9);
-}
-
-@media (min-width: 850px) {
   nav {
-    max-width: 1200px;
-    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: var(--mono);
+    font-size: 90%;
+    padding: 1rem;
+    z-index: 1000;
   }
-  
-  nav li:first-child {
-    flex-basis: auto;
-    text-align: left;
-    margin-right: auto;
-  }
-}
 
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  nav h1 a {
+    font-family: var(--sans);
+    font-size: 80%;
+  }
+
+  .hamburger {
+    display: none;
+    z-index: 1000;
+  }
+
+  .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: var(--nord4);
+  }
+
+  #nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo-icon {
+    width: 3rem;
+    color: var(--nord9);
+  }
+
+  nav h1 span {
+    display: inline-flex;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  nav h1 span:hover {
+    color: var(--nord9);
+  }
+
+  nav a {
+    color: var(--nord4);
+    text-decoration: none;
+    display: block;
+  }
+
+  nav a:hover {
+    color: var(--nord8);
+  }
+
+  .resume-button {
+    background-color: var(--nord8);
+    color: var(--nord2);
+    padding: 0.5rem;
+    border-radius: 5px;
+  }
+
+  .resume-button:hover {
+    color: var(--nord6);
+    background-color: var(--nord9);
+  }
+
+  @media (max-width: 850px) {
+    #nav-menu {
+      position: absolute;
+      left: -100%;
+      top: 5rem;
+      flex-direction: column;
+      background-color: var(--nord0);
+      width: 100%;
+      border-radius: 10px;
+      text-align: center;
+      transition: 0.3s;
+      box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    #nav-menu.active {
+      left: 0;
+    }
+
+    nav ul li {
+      margin: 2.5rem 0;
+    }
+
+    .hamburger {
+      display: block;
+      cursor: pointer;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+      opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+    }
+  }
 </style>
