created some fixes for problems in design

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -149,6 +149,7 @@ import Icon from "astro-iconify";
   @media (max-width: 850px) {
     #nav-menu {
       position: absolute;
+      z-index: 10;
       left: -100%;
       top: 5rem;
       flex-direction: column;
