--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -38,7 +38,7 @@
 
 <style>
 #contact {
-  background-color: var(--nord1);
+  background-color: var(--nord2);
   padding: 10rem 0;
   text-align: center;
 }
@@ -47,6 +47,7 @@
   background-color: var(--nord8);
   color: var(--nord1);
   font-size: 1rem;
+  font-weight: 500;
   padding: .5rem;
   border-radius: 5px;
   border: none;
