--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ import Footer from "../components/Footer.astro";
     --nord0: #2E3440;
     --nord1: #3B4252;
     --nord2: #434C5E;
-    --nord3: #4C566A4;
+    --nord3: #4C566A;
     /*  Snow Storm  */
     --nord4: #D8DEE9;
     --nord5: #E5E9F0;
@@ -75,7 +75,7 @@ a:hover {
   text-decoration: none;
 }
 .social-icon {
-  width: 3rem;
+  width: 2rem;
 }
 
 .sr-only {
