--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import { Image } from '@astrojs/image/components';
 <style>
 #intro {
   padding-bottom: 10rem;
-	@media((max-width:40em)) {
+	@media((max-width:50em)) {
 		padding-bottom: 25rem;
 	}
 }
@@ -84,6 +84,7 @@ import { Image } from '@astrojs/image/components';
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
+		gap: 2rem;
 		padding: 2rem;
 	}
 	
@@ -91,7 +92,7 @@ import { Image } from '@astrojs/image/components';
 		margin-right: 3rem;
 		text-wrap: balance;
 
-		@media (max-width:40em) {
+		@media (max-width:50em) {
 			position: absolute;
 			top: 40%;
 			color: white;
@@ -103,7 +104,7 @@ import { Image } from '@astrojs/image/components';
 	}
 
 	.introduction-description-text {
-		@media (max-width:40em) {
+		@media (max-width:50em) {
 			margin-top: 15rem;
 		}
 	}
