--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -150,23 +150,26 @@ import Icon from "astro-iconify";
     #nav-menu {
       position: absolute;
       z-index: 10;
-      left: -100%;
+      right: -100%;
       top: 5rem;
       flex-direction: column;
+      align-items: start;
+      gap: 1rem;
       background-color: var(--nord0);
-      width: 100%;
+      padding: 2rem 2rem 2rem 1rem;
+      width: 65%;
       border-radius: 10px;
-      text-align: center;
+      text-align: left;
       transition: 0.3s;
-      box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 10px 27px rgba(0, 0, 0, 0.5);
     }
 
     #nav-menu.active {
-      left: 0;
+      right: 0;
     }
 
     nav ul li {
-      margin: 2.5rem 0;
+      margin: .8rem 3.5rem;
     }
 
     .hamburger {
